--- a/doghouse/appengine/tmpl/gh/top.html
+++ b/doghouse/appengine/tmpl/gh/top.html
@@ -34,7 +34,7 @@
   <pre>
 $ reviewdog -conf=.reviewdog.yml -reporter=github-pr-check
   </pre>
-  See also <a href="https://github.com/reviewdog/reviewdog">github.com/reviewdog/reviewdog</a>
+  See also <a href="https://github.com/massongit/reviewdog">github.com/massongit/reviewdog</a>
 </p>
 
 
