--- a/doghouse/appengine/tmpl/index.html
+++ b/doghouse/appengine/tmpl/index.html
@@ -19,7 +19,7 @@
   </p>
 
   <p>
-    See also <a href="https://github.com/reviewdog/reviewdog">github.com/reviewdog/reviewdog</a>
+    See also <a href="https://github.com/massongit/reviewdog">github.com/massongit/reviewdog</a>
   </p>
 
 </div>
